--- a/_config.yml
+++ b/_config.yml
@@ -14,23 +14,23 @@ author: Fábio Madeira
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
 baseurl: /vitae/
-title: Chris Turner's Resume
-name: Chris Turner
-email: christurner@me.com
-email_full: mailto:youremail@me.com
-website: github.io/sustain
-website_full: https://jekyller.github.io/sustain
+title: Bruno Paixão Resume
+name: Bruno Paixão
+email: brunopaixao87@gmail.com
+email_full: mailto:brunopaixao87@gmail.com
+website: github.io/brunopaixao87
+website_full: https://brunopaixao.dev
 github: trending
 twitter: twitter
-tel: +44 0000 000000
-tel_full: tel:+440000000000
-google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+tel: +55 79 999946413
+tel_full: tel:+5579999946413
+google_maps: ''
 address:
   street: 44 Perth Street
-  postcode: EH3 5BL
-  city: Edinburgh
-  country: United Kingdom
-google_analytics: UA-69300817-1
+  postcode: 
+  city: Aracaju - SE
+  country: Brazil
+google_analytics: UA-135965173-1
 
 # needed for travis-ci build
 exclude: [vendor]
