--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Bruno Paixão Resume
 name: Bruno Paixão
 email: brunopaixao87@gmail.com
 email_full: mailto:brunopaixao87@gmail.com
-website: github.io/brunopaixao87
+website: Bruno Paixão
 website_full: https://brunopaixao.dev
 github: trending
 twitter: twitter
