--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ email: brunopaixao87@gmail.com
 email_full: mailto:brunopaixao87@gmail.com
 website: Bruno Paixão
 website_full: https://brunopaixao.dev
-github: trending
-twitter: twitter
+github: brunopaixao87
+twitter: brunopaixaodev
 tel: +55 79 999946413
 tel_full: tel:+5579999946413
 google_maps: ''
